// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationLauncherWrapper is working properly as Grid 1`] = `
<li
  class="applauncher-pf dropdown applauncher-pf-block-list"
>
  <button
    aria-expanded="false"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-home applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Ipsum
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-virtual-machine applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Royal
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Lemon
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Domain
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`ApplicationLauncherWrapper is working properly as Grid when open 1`] = `
<li
  class="applauncher-pf dropdown applauncher-pf-block-list open"
>
  <button
    aria-expanded="true"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-home applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Ipsum
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-virtual-machine applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Royal
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Lemon
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Domain
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`ApplicationLauncherWrapper is working properly as List with no Icons 1`] = `
<li
  class="applauncher-pf dropdown"
>
  <button
    aria-expanded="false"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Ipsum
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Royal
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Lemon
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Domain
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`ApplicationLauncherWrapper is working properly as List with no Icons when open 1`] = `
<li
  class="applauncher-pf dropdown open"
>
  <button
    aria-expanded="true"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Ipsum
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Royal
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Lemon
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          class="applauncher-pf-link-title"
        >
          Domain
        </span>
      </a>
    </li>
  </ul>
</li>
`;

exports[`StatefulApplicationLauncherWrapper is working properly as Grid 1`] = `
<li
  class="applauncher-pf dropdown applauncher-pf-block-list"
>
  <button
    aria-expanded="false"
    class="nav-item-iconic dropdown-toggle btn btn-link"
    type="button"
  >
    <span
      aria-hidden="true"
      class="fa fa-th applauncher-pf-icon"
    />
    <span
      class="dropdown-title"
    >
      <span
        class="applauncher-pf-title"
      >
        Application Launcher
        <span
          aria-hidden="true"
          class="caret"
        />
      </span>
    </span>
  </button>
  <ul
    class="dropdown-menu-right dropdown-menu"
    role="menu"
  >
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-home applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Ipsum
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-virtual-machine applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Royal
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-storage-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Lemon
        </span>
      </a>
    </li>
    <li
      class="applauncher-pf-item"
      role="presentation"
    >
      <a
        class="applauncher-pf-link"
        href="#"
        role="menuitem"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-pficon pficon-domain applauncher-pf-link-icon"
        />
        <span
          class="applauncher-pf-link-title"
        >
          Domain
        </span>
      </a>
    </li>
  </ul>
</li>
`;
